slider instagram, aanpassingne afspraken

--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -362,3 +362,13 @@ footer:after {
     margin: 10px 0px;
     padding-bottom: 10px;
 }
+.haircut-slider .carousel{
+    padding: 0 30px;
+}
+
+
+section.haircut-slider .slider-item{
+    float: left;
+}
+
+
