added funct so admin can change social media settings

--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -501,3 +501,7 @@ input.file-select{
 body.admin h1{
     padding-top: 0;
 }
+
+body.admin .form-container.form-social-container{
+    max-width: 750px;
+}
