--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -14,11 +14,11 @@ h2{
     align-items: center;
 }
 header {
-    height: 50vh;
+    height: 75vh;
     min-height: 450px;
     /*background: url(http://i.huffpost.com/gen/1501366/images/o-HAIRSTYLIST-facebook.jpg) no-repeat fixed center center/cover;*/
     /*background: red url(http://www.freshandstyle.nl/wp-content/uploads/zaak-foto.jpg) no-repeat fixed center center/cover;*/
-    background: linear-gradient(rgba(232, 136, 136, 0.5), #000000), url(http://www.freshandstyle.nl/wp-content/gallery/fresh-style-hairfashion/dscn1497.jpg) no-repeat fixed center center/cover;
+    background: linear-gradient(rgba(232, 136, 136, 0.5), #000000), url(../../media/allef-vinicius-354911.jpg) no-repeat fixed center center/cover;
 
     /*margin bottom height of navbar*/
     /*background: #000;*/
@@ -85,8 +85,15 @@ header .header-holder button{
 
 .tarieven{
     /*background: linear-gradient(rgba(232, 136, 136, 0.5), #000000), url(http://www.freshandstyle.nl/wp-content/gallery/fresh-style-hairfashion/dscn1497.jpg) no-repeat fixed center center/cover;*/
-
+    /*background: linear-gradient(rgba(0, 0, 0, 0.44), #f5f5f5), url(../../media/christoffer-engstrom-189365.jpg) no-repeat fixed center center/cover;*/
+    background: url(../../media/hai-phung-247271.jpg) no-repeat fixed center center/cover;
 }
+
+.tarieven h2{
+    color: #fff;
+}
+
+
 
 .tarieven table{
     background: #fff;
@@ -102,6 +109,12 @@ header .header-holder button{
 .tarieven table tr td{
     padding: 10px;
 }
+/*about sectie*/
+.about-us{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
 /*Zebra coloring for table*/
 .tarieven table tr:nth-child(odd) {
     background: #F9F9F9;
@@ -368,7 +381,6 @@ footer:after {
     padding: 0 30px;
 }
 
-
 section.haircut-slider .slider-item{
     float: left;
 }
@@ -443,8 +455,8 @@ body.admin .welcome-user{
     float: right;
 }
 /*body.admin{*/
-    /*margin-top: 32px;*/
-    /*margin-left: 175px;*/
+/*margin-top: 32px;*/
+/*margin-left: 175px;*/
 /*}*/
 
 body.admin .container{
@@ -468,13 +480,13 @@ body.admin table a.table-action{
 span.red{
     color: red;
 }span.green{
-    color: green;
-}
-
- a.anchor-button{
-     -webkit-appearance: inherit;
-     border-radius: .25rem;
+     color: green;
  }
+
+a.anchor-button{
+    -webkit-appearance: inherit;
+    border-radius: .25rem;
+}
 /*settings*/
 
 body.admin .form-container{
@@ -508,4 +520,41 @@ body.admin h1{
 
 body.admin .form-container.form-social-container{
     max-width: 750px;
+}
+
+/*.media-pictures img.media-picture{*/
+/*width: 100%;*/
+/*}*/
+
+/*.media-pictures .media-picture-container{*/
+/*padding: 0;*/
+/*}*/
+/*.media-pictures .img-thumbnail{*/
+/*width: 100%;*/
+/*height: 100%;*/
+
+/*}*/
+
+.media-pictures-container{
+    width: 150px;
+    height: 150px;
+    float: left;
+}
+.media-pictures-container img{
+    height: 100%;
+}
+
+img.edit-image{
+    max-width: 250px;
+    width: 100%;
+}
+
+/*haircut-slider*/
+.haircut-slider{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.haircut-slider .carousel-item{
+    margin: 0 auto;
+    text-align: center;
 }
